--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -656,6 +656,8 @@ Show that $\v Y$  and $\v Z$  are independent.
 
 <h1><a
 name="Multivariate normal distribution (part 6)">Multivariate normal distribution (part 6)</a></h1>
+<a href="https://youtu.be/rawtkxZq4fA">Video for this section</a>
+<p></p>
 As we have already mentioned, a multivariate normal distribution need not always have a density. However, for an important
  special case, it does. This case is called the nonsingular
  case, while the other case is called singular. The  case is determined by the $\Sigma$ 
@@ -744,9 +746,11 @@ name="Problem set 6">Problem set 6</a></h2>
 <p></p>
 
 <p>
-<b>EXERCISE 15:</b>&nbsp;Let $J_2$  be the $2\times2$  matrix with all entries equal to 1. Let 
+<b>EXERCISE 15:</b>&nbsp;Let
 $$\left[\begin{array}{ccccccccccc}X\\Y
-\end{array}\right] \sim N_2(\v 0, J_2).$$
+\end{array}\right] \sim N_2\left(\left[\begin{array}{ccccccccccc}1\\2
+\end{array}\right], \left[\begin{array}{ccccccccccc}1 &amp; -1\\-1 &amp; 1
+\end{array}\right]).$$
 If we take data $(x_1,y_1),...,(x_n,y_n)$  from $(X,Y)$, what will the scatterplot look like?
 </p>
 
