--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -428,7 +428,7 @@ Apply the affine transform result with $B=$ this matrix and $\v c=\v0$  to prove
 
 <p></p>
 The second corollary is the multivariate analogue of univariate standardisation: If $X\sim N(\mu,\sigma^2)$  for $\sigma^2&gt;0,$ 
- then $\frac{X-\mu}{ss}\sim N(0,1).$
+ then $\frac{X-\mu}{\sigma}\sim N(0,1).$
 <p></p>
 
 <fieldset>
