--- a/prob2_2025/dirichlet.html
+++ b/prob2_2025/dirichlet.html
@@ -170,7 +170,7 @@ $$f(x_1,...,x_p) = \left\{\begin{array}{ll}c x_1^{a_1-1}x_2^{a_2-1}\cdots x_p^{a
 where 
 $$D = \{(x_1,...,x_p)~:~\forall i~~x_i\geq 0,~~\sum_1^p x_i=1\},$$
 and 
-$$c = \frac{\Gamma(a_1)\cdots \Gamma(a_p)}{\Gamma(a_1+\cdots+a_p)}.$$
+$$c = \frac{\Gamma(a_1+\cdots+a_p)}{\Gamma(a_1)\cdots \Gamma(a_p)}.$$
 </fieldset>
 It is not immediately obvious that the total integral of this function is indeed 1. However, it is easy for $p=2,$ because
  if $(X_1,X_2)\sim Dir(a_1,a_2)$  then $X_1\sim Beta(a_1,a_2)$  and $X_2 = 1-X_1.$
