--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -889,7 +889,11 @@ Let $X_1,...,X_n$  be a random sample (<i>i.e.</i>, IID) from $N(\mu, \sigma^2).
 </fieldset>
 
 <p>
-<b><i>Proof:</i></b>
+<b><i>Proof:</i></b>Without loss of generality, we take $\mu=0.$
+<blockquote><a
+href="javascript:hideShow('reason1')"><b>[Because...]</b></a><div
+class="ans" id="reason1">Once we have proved the $\mu=0$  case, we can add $\mu$  to each $X_i$  to
+ get a general form. This will add $\mu$  to $\bar X.$  Also $S^2$  will be unchanged.</div></blockquote>
 In ${\mathbb R}^n$  consider the subspace $V=span\{\v 1\},$  where $\v 1$  is the vector of al $1$'s. Clearly,
  $dim(V)=1$  and $dim(V^\perp)=n-1.$
 <p></p>
