--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -765,7 +765,7 @@ name="Problem set 6">Problem set 6</a></h2>
 $$\left[\begin{array}{ccccccccccc}X\\Y
 \end{array}\right] \sim N_2\left(\left[\begin{array}{ccccccccccc}1\\2
 \end{array}\right], \left[\begin{array}{ccccccccccc}1 &amp; -1\\-1 &amp; 1
-\end{array}\right]).$$
+\end{array}\right]\right).$$
 If we take data $(x_1,y_1),...,(x_n,y_n)$  from $(X,Y)$, what will the scatterplot look like?
 </p>
 
@@ -893,7 +893,7 @@ Let $X_1,...,X_n$  be a random sample (<i>i.e.</i>, IID) from $N(\mu, \sigma^2).
 <blockquote><a
 href="javascript:hideShow('reason1')"><b>[Because...]</b></a><div
 class="ans" id="reason1">Once we have proved the $\mu=0$  case, we can add $\mu$  to each $X_i$  to
- get a general form. This will add $\mu$  to $\bar X.$  Also $S^2$  will be unchanged.</div></blockquote>
+ get the general form. This will add $\mu$  to $\bar X.$  Also $S^2$  will be unchanged.</div></blockquote>
 In ${\mathbb R}^n$  consider the subspace $V=span\{\v 1\},$  where $\v 1$  is the vector of al $1$'s. Clearly,
  $dim(V)=1$  and $dim(V^\perp)=n-1.$
 <p></p>
