--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -1018,7 +1018,7 @@ name="Distribution of quadratic forms">Distribution of quadratic forms</a></h1>
 <legend><b>Definition: Quadratic form</b></legend>
 By a <b><font color="red" size="40">quadratic form</font></b>  in $n$-variables we understand a function $q:{\mathbb R}^n\rightarrow{\mathbb R}$  of the form
 $$q(\v x) = \v x' A \v x$$
-for some fixed real, symmetric matrix.
+for some fixed real, symmetric matrix $A$.
 </fieldset>
 Any quadratic form is a linear combination of terms like $x_i^2$  or $x_ix_j$  (for $i\neq j$). The definition
  implies that every real, symmetric matrix produces a quadratic form. Conversely, every quadratic form has a unique real,
