--- a/prob2_2025/index.html
+++ b/prob2_2025/index.html
@@ -204,7 +204,7 @@ After midsem:
 </li>
 
 <li>
-<a href="dirichlet.html">Dirichlet distribution</a>
+<a href="dirichlet.html">Multinomial and Dirichlet distributions</a>
 </li>
 
 <li>
