--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -1235,6 +1235,10 @@ Express you answer in terms CDF of some standard distribution.
 <b>EXERCISE 37:</b>&nbsp;<font size="-2">[hpstrans19.png]</font><img width="" src="image/hpstrans19.png" style="vertical-align:text-top;"></p>
 
 <p></p>
+::<p>
+<b>EXERCISE 38:</b>&nbsp;<font size="-2">[wilks9.png]</font><img width="" src="image/wilks9.png" style="vertical-align:text-top;"></p>
+
+<p></p>
 <hr/>
 <table width="100%" border="0">
 <tr>
