--- a/prob2_2025/projects.html
+++ b/prob2_2025/projects.html
@@ -149,97 +149,83 @@ function myFunction() {
 </head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
-<h3/>
+<h3>Projects</h3>
 <ul>
 <li>
-<a href="#Probability II (B1, 2025)">Probability II (B1, 2025)</a>
+<a href="#Project 1">Project 1</a>
 </li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#Assignment and projects">Assignment and projects</a>
+<li>
+<a href="#Project 2">Project 2</a>
 </li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#Class notes">Class notes</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#References">References</a>
+<li>
+<a href="#Project 3">Project 3</a>
 </li>
 </ul>
 <hr/>
+<title>Projects</title>
+This page lists a few fun projects related to things we have learned. These are totally optional, and will have no bearing
+ on the marks that you will get. Indeed, unless you are finding the course super easy, I would advise you to think about
+ the projects only after the semester is over. 
 <h1><a
-name="Probability II (B1, 2025)">Probability II (B1, 2025)</a></h1>
-URL: https://arnabc74.github.io/prob2_2025/
-<h2><a
-name="Assignment and projects">Assignment and projects</a></h2>
-You need to submit solution to the <a href="hw.html">assigned problems</a>  before the study leave starts. The assignment
- carries 10 marks. 
+name="Project 1">Project 1</a></h1>
+In one of the exercises about $Unif(0,1)$  distribution, we had partitioned $(0,1)$  into a number of equal subintervals,
+ and had permuted them. This "scrambling" had produced a new random variable from an $Unif(0,1)$  random variable. Your
+ first task is to redo that exercise to convince yourself that the new random variable again has $Unif(0,1)$  distribution.
 <p></p>
-The <a href="projects.html">projects</a>  are optional and carry no marks.
+Now take any $X\sim Unif(0,1),$  and split $(0,1)$  into $n$  equal subintervals
+ where $n\in{\mathbb N}.$  Call these subintervals the <i>states</i>, labelled $1,...,n.$  Now
+ split each state into $n$  further subintervals (equal width) called <i>districts</i>, again
+ lablled $1,...,n.$  Thus, effectively you have split $(0,1)$  into $n^2$ 
+ subintervals that may be labelled as $(i,j)$  for $i,j\in\{1,...,n\},$  where $i$  denotes the state, and
+ $j$  denotes the district within the state. 
+<p></p>
+Let $Y$  be obtained by scrambling $X$  as follows: Swap $(i,j)$-th subinterval with the $(j,i)$-th subinterval.
+<p></p>
+Your next task is to find the joint distribution of $(X,Y).$  For this draw the joint distribution of $(X,X)$ 
+ as the $45^\circ$  line drawn as a diagonal in the unit square. The entire mass 1 is uniformly distributed along this
+ line. Take $n=2$  and do the swaps in the vertical axis, and sketch how the diagonal line
+ gets split into $n^2=4$  equal pieces and gets redistributed. 
+<p></p>
+Obtain the joint CDF of $(X,Y)$  as the points $\left(\frac in,\frac jn\right).$  
+<p></p>
+Compare with the CDF had $X, Y$  been IID $Unif(0,1).$  
+<p></p>
+Do you notice anything funny?
 <p></p>
 
-<h2><a
-name="Class notes">Class notes</a></h2>
-Before midsem:
-<ol type="">
+<h1><a
+name="Project 2">Project 2</a></h1>
+For this project you need to know how to extract pixel values from an image. There are R and
+ Python packages/functions for this purpose. You may Google, or ask me to learn about them.
+<p></p>
+Take printed text, preferrably large font, black ink on white paper. Hold your camera fixed in
+ from of it, and take 50 greylevel photos of the same thing without moving th camera or the page. Many
+ cameras have a "burst mode" that will help you to take a bunch of photos with a single click.
+ Extract the pixel values for each. Compute $V_{ij}=$  variance of the 50 meaurements of the
+ $(i,j)$-th pixel.  Would you expect all the $V_{ij}$'s to be nearly the same? Think, and make a guess. Now actually
+ compute and see. 
+<p></p>
+Can you explain what you see? 
+<p></p>
 
-<li>
-<a href="contabs.html">Distributions with densities</a>
-</li>
-
-<li>
-<a href="cjoint.html">Joint, marginal and conditional PDF</a>
-</li>
-
-<li>
-<a href="trans.html">Transformations of random variables</a>
-</li>
-
-<li>
-<a href="cdistrib1.html">Some standard distributions with
-densities</a>
-</li>
-
-<li>
-<a href="cantor.html">Wierd distributions</a> (not in
-midsem syllabus)</li>
-
-</ol>
-After midsem:
-<ol type="">
-
-<li>
-<a href="cdistrib2.html">Some more standard distributions with densities</a>
-</li>
-
-<li>
-<a href="normal.html">Multivariate normal and related distributions</a>
-</li>
-
-<li>
-<a href="dirichlet.html">Multinomial and Dirichlet distributions</a>
-</li>
-
-<li>
-<a href="measure.html">Lebesgue integration</a>
-</li>
-
-</ol>
-
-<h2><a
-name="References">References</a></h2>
-The class notes constitute the main reference. It is based on the following books:
-<ul>
-
-<li>Ross: A First Course in Probability Theory</li>
-
-<li>Hoel, Port and Stone: Probability Theory</li>
-
-<li>Ross: Introduction to Probability Models</li>
-
-<li>Royden and Fitzpatrick: Real Analysis</li>
-
-<li>Allan Gut: Probability--A Graduate Course</li>
-
-</ul> 
+<h1><a
+name="Project 3">Project 3</a></h1>
+THere are 5 bridges linking two shores of a river as shown below.
+<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/bridges.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+Each brindge is either open or closed with probability $\frac 12$  independently of the others. What is the probability
+ that the man on shore 1 would be able to get to the other shore? Of course, you can compute the
+ probability using brute force enumeration.
+ But there is a smart way to get the answer. Can you find it? 
+<p></p>
 <hr/>
 <table width="100%" border="0">
 <tr>
