--- a/prob2_2025/hw.html
+++ b/prob2_2025/hw.html
@@ -149,97 +149,81 @@ function myFunction() {
 </head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
-<h3/>
+<h3>Assignment</h3>
 <ul>
 <li>
-<a href="#Probability II (B1, 2025)">Probability II (B1, 2025)</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#Assignment and projects">Assignment and projects</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#Class notes">Class notes</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#References">References</a>
+<a href="#Problems">Problems</a>
 </li>
 </ul>
 <hr/>
-<h1><a
-name="Probability II (B1, 2025)">Probability II (B1, 2025)</a></h1>
-URL: https://arnabc74.github.io/prob2_2025/
-<h2><a
-name="Assignment and projects">Assignment and projects</a></h2>
-You need to submit solution to the <a href="hw.html">assigned problems</a>  before the study leave starts. The assignment
- carries 10 marks. 
+$\newcommand{\v}[1]{\boldsymbol{#1}}$
+<title>Assignment</title>
+You need to submit solutions to these before the study leave starts. The
+ assignment carries 10 marks.
+   <h1><a
+name="Problems">Problems</a></h1>
+
+<p>
+<b>EXERCISE 1:</b>&nbsp;<font size="-2">[hpspdf28.png]</font><img width="" src="image/hpspdf28.png" style="vertical-align:text-top;"></p>
+
+<p>
+<b>EXERCISE 2:</b>&nbsp;<font size="-2">[rossdistrib12.png]</font><img width="" src="image/rossdistrib12.png" style="vertical-align:text-top;"></p>
+
+<p>
+<b>EXERCISE 3:</b>&nbsp;Find $V(X)$  if $X\sim Beta(a,b)$  for $a,b&gt;0.$</p>
+
+<p>
+<b>EXERCISE 4:</b>&nbsp;Let $(X,Y)$  be a random point in ${\mathbb R}^2$, where $X,Y$  are IID $N(0,1).$
+  Let $(R,\Theta)$  be the same point in polar coordinates. Find the joint distribution of
+ $(R,\Theta).$  </p>
+
+<p>
+<b>EXERCISE 5:</b>&nbsp;If $X\sim Cauchy,$  then show that $\frac 1X\sim Cauchy$, as well. </p>
+
 <p></p>
-The <a href="projects.html">projects</a>  are optional and carry no marks.
+
+<p>
+<b>EXERCISE 6:</b>&nbsp;If $X\sim N(\mu,\sigma^2)$, then $Y=e^X$  is said to have
+ log-normal$(\mu,\sigma^2)$  distribution. Show that $E(Y^k)$  exists finitely for all
+ $k\in{\mathbb N}.$  Also show that MGF of $Y$  does not exist anywhere except at $0.$</p>
+
 <p></p>
 
-<h2><a
-name="Class notes">Class notes</a></h2>
-Before midsem:
-<ol type="">
+<p>
+<b>EXERCISE 7:</b>&nbsp;Let $\left[\begin{array}{ccccccccccc}X_1\\X_2
+\end{array}\right]\sim N_2\left( \left[\begin{array}{ccccccccccc}\mu_1\\\mu_2
+\end{array}\right],\left[\begin{array}{ccccccccccc}\sigma^2_1 &amp; \rho \sigma_1
+ \sigma_2\\ \rho \sigma_1 \sigma_2 &amp; \sigma^2_2
+\end{array}\right]\right)$, where $\rho\in(-1,1)$  and
+ $\sigma^2_1,\sigma^2_2 &gt; 0.$  Let 
+ $a\in{\mathbb R}$  be any number. Show that given $X_1=a$  the conditional distribution of $X_2$  is 
+$$N\left(\mu_2+\frac{\rho \sigma_2}{\sigma_1}(a-\mu_1), (1-\rho^2)\sigma^2_2\right).$$  
+Show this by direct computation (not as a corollary to some other exercise from the class webpage). 
+</p>
 
-<li>
-<a href="contabs.html">Distributions with densities</a>
-</li>
+<p></p>
 
-<li>
-<a href="cjoint.html">Joint, marginal and conditional PDF</a>
-</li>
+<p>
+<b>EXERCISE 8:</b>&nbsp;Let $\v \Pi$  be a random vector $(\Pi_1,...,\Pi_k,1-\Pi_1-\cdots\Pi_k),$  where
+ $(\Pi_1,...,\Pi_k)\sim Dir(a_1,...,a_{k+1}).$  Let the conditional distribution of $\v
+ X$  given $(\Pi_1,...,\Pi_k)$  be $Multinom(n,\v \Pi).$ 
+Then show that  the conditional distribution
+ of $\v \Pi$  given $\v X$  is $Dir(a_1+X_1,...,a_{k+1}+X_{k+1}).$
+</p>
 
-<li>
-<a href="trans.html">Transformations of random variables</a>
-</li>
+<p></p>
 
-<li>
-<a href="cdistrib1.html">Some standard distributions with
-densities</a>
-</li>
+<p>
+<b>EXERCISE 9:</b>&nbsp;If $X_1,X_2$  are independent $Gamma(p_1,a)$  and $Gamma(p_2,a)$  random
+ variables, then show that 
+$$\frac{X_1}{X_1+X_2}\sim Beta(p_1,p_2).$$
+</p>
 
-<li>
-<a href="cantor.html">Wierd distributions</a> (not in
-midsem syllabus)</li>
+<p></p>
 
-</ol>
-After midsem:
-<ol type="">
-
-<li>
-<a href="cdistrib2.html">Some more standard distributions with densities</a>
-</li>
-
-<li>
-<a href="normal.html">Multivariate normal and related distributions</a>
-</li>
-
-<li>
-<a href="dirichlet.html">Multinomial and Dirichlet distributions</a>
-</li>
-
-<li>
-<a href="measure.html">Lebesgue integration</a>
-</li>
-
-</ol>
-
-<h2><a
-name="References">References</a></h2>
-The class notes constitute the main reference. It is based on the following books:
-<ul>
-
-<li>Ross: A First Course in Probability Theory</li>
-
-<li>Hoel, Port and Stone: Probability Theory</li>
-
-<li>Ross: Introduction to Probability Models</li>
-
-<li>Royden and Fitzpatrick: Real Analysis</li>
-
-<li>Allan Gut: Probability--A Graduate Course</li>
-
-</ul> 
+<p>
+<b>EXERCISE 10:</b>&nbsp;Let $\v X\sim N_n(\v 0, I)$  and $J_{n\times n}$  have all entries equl to 1. Find
+ the distribution of $\v X' J\v X.$</p>
 <hr/>
 <table width="100%" border="0">
 <tr>
