--- a/prob2_2025/index.html
+++ b/prob2_2025/index.html
@@ -171,7 +171,8 @@ URL: https://arnabc74.github.io/prob2_2025/
 <h2><a
 name="Assignment and projects">Assignment and projects</a></h2>
 You need to submit solution to the <a href="hw.html">assigned problems</a>  before the study leave starts. The assignment
- carries 10 marks. 
+ carries 10 marks. You must submit the solutions as handwritten hard copies. No pdf, doc, scans
+ sent via email/github will be accepted.
 <p></p>
 The <a href="projects.html">projects</a>  are optional and carry no marks.
 <p></p>
