--- a/prob2_2025/hw.html
+++ b/prob2_2025/hw.html
@@ -159,7 +159,7 @@ function myFunction() {
 $\newcommand{\v}[1]{\boldsymbol{#1}}$
 <title>Assignment</title>
 You need to submit solutions to these before the study leave starts. The
- assignment carries 10 marks.
+ assignment carries 10 marks. Only hand-written hard copies will be accepted. 
    <h1><a
 name="Problems">Problems</a></h1>
 
