--- a/prob2_2025/dirichlet.html
+++ b/prob2_2025/dirichlet.html
@@ -174,10 +174,13 @@ $\newcommand{\v}[1]{\boldsymbol{#1}}$
 <h1><a
 name="Multinomial distribution">Multinomial distribution</a></h1>
 The multinomial distribution is a direct generalisation of the binomial distribution. We often think of the $Binom(n,p)$ 
- distribution as the distribution of $X,$  the number of heads obtained in $n$  independent tosses of a coin with
- $P(head)=p.$  Iwe replace the coin with a die with probabilities $p_1,...,p_6$  for th different faces, and let
- $X_i$  denote the frequency of $i$  in $n$  independent rolls of the die, then the joint distribution of
- $(X_1,...,X_n)$  is called <b><font color="red" size="40">multinomial</font></b>  with parameters $n,\v p$, where $\v p=(p_1,...,p_n)'.$
+ distribution as the distribution of the number, $X$, of heads obtained in $n$ 
+ independent tosses of a coin with
+ $P(head)=p.$  If we replace the coin with a die with probabilities $p_1,...,p_6$  for the
+ different faces, and let
+ $X_i$  denote the frequency of the $i$-th face  in $n$  independent rolls of the die, then
+ the joint distribution of
+ $(X_1,...,X_6)$  is called <b><font color="red" size="40">multinomial</font></b>  with parameters $n,\v p$, where $\v p=(p_1,...,p_6)'.$
 <p></p>
 In general, we have the following definition.
 <fieldset>
