--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -1156,6 +1156,12 @@ Let $A_1,...,A_k$  be some $n\times n$  real, symmetric matrices with $A_1+\cdot
 </ol>
 
 </fieldset>
+
+<p>
+<b><i>Proof:</i></b>
+Immediate from the theorem above, taking $A=I.$
+<b><i>[QED]</i></b>
+</p>
 Why do we care about the Fisher-Cochran theorem in probability or statistics? Because we often start with a random vector
  $\v X\sim N_n(0,I),$  and split $\|\v X\|^2$  into some quadratic forms $\|\v X\|^2 = \v X\v X = \v X'A_1\v X+\cdots+\v X'A_k\v X.$
 Then the Fisher-Cochran theorem says that if the quadratic forms are independent, they must each
